--- a/AnimeFranchises.Application/AnimeFranchises.Application.csproj
+++ b/AnimeFranchises.Application/AnimeFranchises.Application.csproj
@@ -6,4 +6,11 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Dtos\" />
+      <Folder Include="Features\" />
+      <Folder Include="Mappers\" />
+      <Folder Include="Validators\" />
+    </ItemGroup>
+
 </Project>
