feat(anime-franchises): setup database context, entity configurations, infrastructure dependency injection

--- a/AnimeFranchises.Api/AnimeFranchises.Api.csproj
+++ b/AnimeFranchises.Api/AnimeFranchises.Api.csproj
@@ -13,4 +13,9 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\AnimeFranchises.Infrastructure\AnimeFranchises.Infrastructure.csproj" />
+      <ProjectReference Include="..\AnimeFranchises.Presentation\AnimeFranchises.Presentation.csproj" />
+    </ItemGroup>
+
 </Project>
