--- a/AnimeFranchises.Api/appsettings.json
+++ b/AnimeFranchises.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Database": "Host=localhost;Port=5432;Database=MyAnimeListDb;User Id=postgres;Password=31415;Include Error Detail=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
