--- a/AnimeFranchises.Application/AnimeFranchises.Application.csproj
+++ b/AnimeFranchises.Application/AnimeFranchises.Application.csproj
@@ -13,4 +13,8 @@
       <Folder Include="Validators\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\AnimeFranchises.Domain\AnimeFranchises.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
