--- a/AnimeFranchises.Application/AnimeFranchises.Application.csproj
+++ b/AnimeFranchises.Application/AnimeFranchises.Application.csproj
@@ -7,14 +7,16 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Dtos\" />
       <Folder Include="Features\" />
-      <Folder Include="Mappers\" />
       <Folder Include="Validators\" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\AnimeFranchises.Domain\AnimeFranchises.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="14.0.0" />
     </ItemGroup>
 
 </Project>
