feat(anime-franchises): add validators for DTOs

--- a/AnimeFranchises.Application/AnimeFranchises.Application.csproj
+++ b/AnimeFranchises.Application/AnimeFranchises.Application.csproj
@@ -8,7 +8,6 @@
 
     <ItemGroup>
       <Folder Include="Features\" />
-      <Folder Include="Validators\" />
     </ItemGroup>
 
     <ItemGroup>
@@ -17,6 +16,7 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="14.0.0" />
+      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
     </ItemGroup>
 
 </Project>
