feat(anime-franchises): configure Program.cs

--- a/AnimeFranchises.Api/AnimeFranchises.Api.csproj
+++ b/AnimeFranchises.Api/AnimeFranchises.Api.csproj
@@ -18,4 +18,8 @@
       <ProjectReference Include="..\AnimeFranchises.Presentation\AnimeFranchises.Presentation.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="8.0.0" />
+    </ItemGroup>
+
 </Project>
