--- a/AnimeFranchises.Api/appsettings.json
+++ b/AnimeFranchises.Api/appsettings.json
@@ -1,6 +1,10 @@
 {
   "ConnectionStrings": {
-    "Database": "Host=localhost;Port=5432;Database=MyAnimeListDb;User Id=postgres;Password=31415;Include Error Detail=true;"
+    "Database": "Host=localhost;Port=5432;Database=MyAnimeListDb;User Id=postgres;Password=31415;Include Error Detail=true;",
+    "Redis": "localhost:6379"
+  },
+  "Redis": {
+    "InstanceName": "my-anime-list:"
   },
   "Logging": {
     "LogLevel": {
