--- a/AnimeFranchises.Infrastructure/AnimeFranchises.Infrastructure.csproj
+++ b/AnimeFranchises.Infrastructure/AnimeFranchises.Infrastructure.csproj
@@ -13,8 +13,10 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.2" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.3" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+      <PackageReference Include="StackExchange.Redis" Version="2.8.31" />
     </ItemGroup>
 
     <ItemGroup>
