feat(anime-series): setup database context, entity configurations and rename entities to fix namespace conflicts

--- a/AnimeSeries.Api/AnimeSeries.Api.csproj
+++ b/AnimeSeries.Api/AnimeSeries.Api.csproj
@@ -13,4 +13,9 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\AnimeSeries.Infrastructure\AnimeSeries.Infrastructure.csproj" />
+      <ProjectReference Include="..\AnimeSeries.Presentation\AnimeSeries.Presentation.csproj" />
+    </ItemGroup>
+
 </Project>
