--- a/AnimeSeries.Application/AnimeSeries.Application.csproj
+++ b/AnimeSeries.Application/AnimeSeries.Application.csproj
@@ -13,4 +13,8 @@
       <Folder Include="Validators\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\AnimeSeries.Domain\AnimeSeries.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
