feat(anime-series): implement CRUD controllers for AnimeSerial, AnimeSerialInfo, and ReWatchedAnimeSerial

--- a/AnimeSeries.Presentation/AnimeSeries.Presentation.csproj
+++ b/AnimeSeries.Presentation/AnimeSeries.Presentation.csproj
@@ -7,11 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Controllers\" />
+      <ProjectReference Include="..\AnimeSeries.Application\AnimeSeries.Application.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\AnimeSeries.Application\AnimeSeries.Application.csproj" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.3.0" />
     </ItemGroup>
 
 </Project>
