--- a/AnimeSeries.Infrastructure/AnimeSeries.Infrastructure.csproj
+++ b/AnimeSeries.Infrastructure/AnimeSeries.Infrastructure.csproj
@@ -13,6 +13,9 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.3" />
+      <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.2" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+      <PackageReference Include="StackExchange.Redis" Version="2.8.31" />
     </ItemGroup>
 
 </Project>
