--- a/AnimeSeries.Presentation/AnimeSeries.Presentation.csproj
+++ b/AnimeSeries.Presentation/AnimeSeries.Presentation.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.3.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.3" />
     </ItemGroup>
 
 </Project>
