chore(anime-series): add initial migration

--- a/src/AnimeSeries/AnimeSeries.Api/appsettings.json
+++ b/src/AnimeSeries/AnimeSeries.Api/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "ConnectionStrings": {
+    "Database": "Host=localhost;Port=5432;Database=MyAnimeListDb;User Id=postgres;Password=31415;Include Error Detail=true;",
+    "Redis": "localhost:6379"
+  },
+  "Redis": {
+    "InstanceName": "my-anime-list:"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
