--- a/src/AnimeSeries/AnimeSeries.Api/appsettings.json
+++ b/src/AnimeSeries/AnimeSeries.Api/appsettings.json
@@ -6,11 +6,17 @@
   "Redis": {
     "InstanceName": "my-anime-list:"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console" ],
+    "MinimumLevel": {
+      "Default": "Information"
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithThreadId", "WithMachineName" ]
   },
   "AllowedHosts": "*"
 }
