--- a/src/AnimeSeries/AnimeSeries.Infrastructure/AnimeSeries.Infrastructure.csproj
+++ b/src/AnimeSeries/AnimeSeries.Infrastructure/AnimeSeries.Infrastructure.csproj
@@ -18,7 +18,10 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.2" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.3" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+      <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
       <PackageReference Include="StackExchange.Redis" Version="2.8.31" />
     </ItemGroup>
 
