--- a/src/AnimeFranchises/AnimeFranchises.Application/AnimeFranchises.Application.csproj
+++ b/src/AnimeFranchises/AnimeFranchises.Application/AnimeFranchises.Application.csproj
@@ -14,6 +14,8 @@
       <PackageReference Include="AutoMapper" Version="14.0.0" />
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
       <PackageReference Include="MediatR" Version="12.4.1" />
+      <PackageReference Include="Polly" Version="8.5.2" />
+      <PackageReference Include="Polly.Extensions" Version="8.5.2" />
       <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
     </ItemGroup>
 
