--- a/src/AnimeFranchises/AnimeFranchises.Infrastructure/AnimeFranchises.Infrastructure.csproj
+++ b/src/AnimeFranchises/AnimeFranchises.Infrastructure/AnimeFranchises.Infrastructure.csproj
@@ -17,6 +17,12 @@
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.3" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.3" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+      <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.11.2" />
+      <PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" Version="1.11.2-beta.1" />
+      <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.11.2" />
+      <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.11.1" />
+      <PackageReference Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" Version="1.11.0-beta.2" />
+      <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.11.1" />
       <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
       <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
       <PackageReference Include="StackExchange.Redis" Version="2.8.31" />
