--- a/src/AnimeFranchises/AnimeFranchises.Api/AnimeFranchises.Api.csproj
+++ b/src/AnimeFranchises/AnimeFranchises.Api/AnimeFranchises.Api.csproj
@@ -19,6 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="9.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.3">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
