--- a/src/AnimeFranchises/AnimeFranchises.Infrastructure/AnimeFranchises.Infrastructure.csproj
+++ b/src/AnimeFranchises/AnimeFranchises.Infrastructure/AnimeFranchises.Infrastructure.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="9.0.0" />
+      <PackageReference Include="AspNetCore.HealthChecks.Redis" Version="9.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.3" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.3">
