feat(viewing-service): add "ViewingInfo", "ViewingStat" and "AnimeReference" entities with context configuration

--- a/src/ViewingService/ViewingService.Api/ViewingService.Api.csproj
+++ b/src/ViewingService/ViewingService.Api/ViewingService.Api.csproj
@@ -13,4 +13,9 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ViewingService.Infrastructure\ViewingService.Infrastructure.csproj" />
+      <ProjectReference Include="..\ViewingService.Presentation\ViewingService.Presentation.csproj" />
+    </ItemGroup>
+
 </Project>
