--- a/src/ViewingService/ViewingService.Application/ViewingService.Application.csproj
+++ b/src/ViewingService/ViewingService.Application/ViewingService.Application.csproj
@@ -13,4 +13,8 @@
       <Folder Include="Validators\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ViewingService.Domain\ViewingService.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
