--- a/src/ViewingService/ViewingService.Presentation/ViewingService.Presentation.csproj
+++ b/src/ViewingService/ViewingService.Presentation/ViewingService.Presentation.csproj
@@ -10,4 +10,8 @@
       <Folder Include="Controllers\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ViewingService.Application\ViewingService.Application.csproj" />
+    </ItemGroup>
+
 </Project>
