feat(messaging): implement producing and consuming "FranchiseCreated" event

--- a/src/FranchiseService/FranchiseService.Infrastructure/FranchiseService.Infrastructure.csproj
+++ b/src/FranchiseService/FranchiseService.Infrastructure/FranchiseService.Infrastructure.csproj
@@ -31,6 +31,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\MessageBroker\MessageBroker.csproj" />
       <ProjectReference Include="..\FranchiseService.Application\FranchiseService.Application.csproj" />
     </ItemGroup>
 
