--- a/src/AnimeService/AnimeService.Application/AnimeService.Application.csproj
+++ b/src/AnimeService/AnimeService.Application/AnimeService.Application.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\MessageBroker\MessageBroker.csproj" />
       <ProjectReference Include="..\AnimeService.Domain\AnimeService.Domain.csproj" />
     </ItemGroup>
 
