--- a/src/FranchiseService/FranchiseService.Application/FranchiseService.Application.csproj
+++ b/src/FranchiseService/FranchiseService.Application/FranchiseService.Application.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\MessageBroker\MessageBroker.csproj" />
       <ProjectReference Include="..\FranchiseService.Domain\FranchiseService.Domain.csproj" />
     </ItemGroup>
 
