refactor(franchise-service): remove caching background jobs and adjust namespaces

--- a/src/FranchiseService/FranchiseService.Infrastructure/FranchiseService.Infrastructure.csproj
+++ b/src/FranchiseService/FranchiseService.Infrastructure/FranchiseService.Infrastructure.csproj
@@ -35,4 +35,8 @@
       <ProjectReference Include="..\FranchiseService.Application\FranchiseService.Application.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="BackgroundTasks\" />
+    </ItemGroup>
+
 </Project>
