--- a/tests/ViewingService/ViewingService.ArchitectureTest/ViewingService.ArchitectureTest.csproj
+++ b/tests/ViewingService/ViewingService.ArchitectureTest/ViewingService.ArchitectureTest.csproj
@@ -22,6 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\..\src\MessageBroker\MessageBroker.csproj" />
       <ProjectReference Include="..\..\..\src\ViewingService\ViewingService.Api\ViewingService.Api.csproj" />
     </ItemGroup>
 
