feat(api-gateway): add Yarp reverse proxy with config for franchise, anime, and viewing services

--- a/src/ApiGateway/appsettings.json
+++ b/src/ApiGateway/appsettings.json
@@ -1,4 +1,64 @@
 {
+  "ReverseProxy": {
+    "Routes": {
+      "franchise-service": {
+        "ClusterId": "franchise-service-cluster",
+        "Match": {
+          "Path": "{**catch-all}"   
+        },
+        "Transforms": [
+          {
+            "PathPattern": "/api/{**catch-all}"
+          }
+        ]
+      },
+      "anime-service": {
+        "ClusterId": "anime-service-cluster",
+        "Match": {
+          "Path": "{**catch-all}"
+        },
+        "Transforms": [
+          {
+            "PathPattern": "/api/{**catch-all}"
+          }
+        ]
+      },
+      "viewing-service": {
+        "ClusterId": "viewing-service-cluster",
+        "Match": {
+          "Path": "{**catch-all}"
+        },
+        "Transforms": [
+          {
+            "PathPattern": "/api/{**catch-all}"
+          }
+        ]
+      }
+    },
+    "Clusters": {
+      "franchise-service-cluster": {
+        "Destinations": {
+          "destination": {
+            "Address": "https://localhost:7192"
+          }  
+        }  
+      },
+      "anime-service-cluster": {
+        "Destinations": {
+          "destination": {
+            "Address": "https://localhost:7209"
+          } 
+        }  
+      },
+      "viewing-service-cluster": {
+        "Destinations": {
+          "destination": {
+            "Address": "https://localhost:7132"
+          }
+        }  
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
