--- a/src/FranchiseService/FranchiseService.Api/appsettings.json
+++ b/src/FranchiseService/FranchiseService.Api/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     "Database": "Host=localhost;Port=5432;Database=MyAnimeListDb;User Id=postgres;Password=31415;Include Error Detail=true;",
-    "Redis": "localhost:6379"
+    "Redis": "localhost:6379",
+    "BlobStorage": "azure-connection-string"
   },
   "Redis": {
     "InstanceName": "my-anime-list:"
