--- a/src/MessageBroker/MessageBroker.csproj
+++ b/src/MessageBroker/MessageBroker.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="MassTransit.Azure.Storage" Version="8.5.0" />
       <PackageReference Include="MassTransit.EntityFrameworkCore" Version="8.4.1" />
       <PackageReference Include="MassTransit.RabbitMQ" Version="8.4.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.4" />
